# PysTDA

./: CONTRIBUTING.md  LICENSE  NOTICE  README.md  TDA_base.py  XsTDA.py  global_param.py  pyproject.toml  sTDA.py  simplified_int.py  system_env.py  utils.py
examples/: basic_usage.py  new_method_template.py
examples/acetamide/: acetamide.chk  acetamide.py  acetamide.xyz  acetamide_CAM.chk
examples/acetamide/gau_chk_molden/: acetamide.in  acetamide.molden  acetamide_cam.in  acetamide_cam.molden
